--- a/style.css
+++ b/style.css
@@ -117,6 +117,12 @@ body {
     border-radius: 3px;
     margin-left: 5px;
     padding: 6px 10px;
+    opacity: 0.6;
+    pointer-events: none;
 }
 
+.footer button.active{
+    opacity: 1;
+    pointer-events: auto;
+}
 /*Ding Dong*/
